Исправлены тесты.