@@ -1,9 +1,7 @@
 package com.gridnine.testing.filters;
 
 import com.gridnine.testing.models.Flight;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * A class for filtering out flights whose arrival time is earlier than the departure.
@@ -18,6 +16,6 @@ public class ArrivalBeforeDepartureFlightFilter implements FlightFilter  {
     public List<Flight> filter(List<Flight> flights) {
         return flights.stream().filter(flight -> flight.getSegments().stream()
                         .anyMatch(segment -> segment.getDepartureDate().isBefore(segment.getArrivalDate())))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
